--- a/public/login.html
+++ b/public/login.html
@@ -63,7 +63,7 @@
     </div>
     <!-- /.login-box -->
 
-    <script src="./js/app.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
