--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
                 <div class="card-header">
                     <h2 class="text-center">Ingresar nueva tarea</h2>
                 </div>
-                <form action="">
+                <form id="form-tareas">
                     <div class="form-group">
-                        <label for="titulo">Tarea</label>
-                        <input type="text" class="form-control" id="titulo" placeholder="Nombre de la tarea">
+                        <label for="nombre-tarea">Tarea</label>
+                        <input type="text" class="form-control" id="nombre-tarea" placeholder="Nombre de la tarea">
                     </div>
                     <div class="form-group">
                         <label for="descripcion">Descripción</label>
@@ -66,6 +66,7 @@
     </div>
 
 
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
