--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,20 @@
         <div class="row">
             <div class="col-md-6 p-2">
                 <div class="card-header">
-                    <h2 class="text-center">Ingresar nueva tarea</h2>
+                    <h2 class="text-center form-title">Crear tarea</h2>
                 </div>
                 <form id="form-tareas" class="my-2">
                     <div class="form-group">
                         <label for="nombre-tarea">Tarea</label>
-                        <input type="text" class="form-control" id="nombre-tarea" placeholder="Nombre de la tarea">
+                        <input type="text" class="form-control" id="task-name" placeholder="Nombre de la tarea">
                     </div>
                     <div class="form-group">
                         <label for="descripcion">Descripción</label>
-                        <textarea class="form-control" id="descripcion" rows="3"></textarea>
+                        <textarea class="form-control" id="task-description" rows="3"
+                            placeholder="Descripción de la tarea"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary submit-button">Crear</button>
+                    <button type="reset" class="btn btn-danger d-none cancel-button">Cancelar</button>
                 </form>
             </div>
             <div class="col-md-6 p-2">
@@ -45,24 +47,7 @@
 
                 <div class="card-body">
                     <ul id="task-list" class="todo-list" data-widget="todo-list">
-                        <li>
-                            <!-- checkbox -->
-                            <div class="icheck-primary d-inline ml-2">
-                                <input type="checkbox" value="" name="task">
-                                <label for="todoCheck1"></label>
-                            </div>
-                            <!-- todo text -->
-                            <span class="text">Design a nice theme</span>
-                            <!-- General tools such as edit or delete-->
-                            <div class="tools">
-                                <i class="fas fa-edit"></i>
-                                <i class="fas fa-trash"></i>
-                            </div>
-                            <div>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores eius adipisci
-                                    corporis numquam repellat distinctio eaque</p>
-                            </div>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -80,8 +65,8 @@
             <span class="text task-name">Design a nice theme</span>
             <!-- General tools such as edit or delete-->
             <div class="tools">
-                <i class="fas fa-edit"></i>
-                <i class="fas fa-trash"></i>
+                <i class="fas fa-edit edit-task"></i>
+                <i class="fas fa-trash delete-task"></i>
             </div>
             <div>
                 <p class="task-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores eius
