--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         </li>
     </template>
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/app.js"></script>
 </body>
 
