--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                             <span class="text task-name">Design a nice theme</span>
                             <!-- General tools such as edit or delete-->
                             <div role="button" class="d-inline-block float-right">
-                                <span class="badge badge-pill badge-warning">Pendiente</span>
+                                <span class="badge badge-pill badge-warning task-state">Pendiente</span>
                                 <!-- <div class="tools"> -->
                                 <i class="fas fa-edit edit-task text-primary ml-2"></i>
                                 <i class="fas fa-trash delete-task text-danger ml-2"></i>
