--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,7 @@
     </template>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/functions.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
