--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,21 @@
 </head>
 
 <body>
+
+	<nav class=" navbar navbar-expand navbar-white navbar-light">
+		<!-- Left navbar links -->
+		<ul class="navbar-nav">
+			<li class="nav-item d-none d-sm-inline-block">
+				<a href="/index.html" class="nav-link">Home</a>
+			</li>
+			<li class="nav-item d-none d-sm-inline-block">
+				<a href="" id="logout" class="nav-link">Cerrar Sesion</a>
+			</li>
+		</ul>
+
+
+	</nav>
+
 	<header class="container">
 		<h1 class="text-center my-4">ToDo App IUPA</h1>
 	</header>
