--- a/public/login.html
+++ b/public/login.html
@@ -2,126 +2,127 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ToDo App | Log in</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>ToDo App | Log in</title>
 
-    <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="./css/adminlte.min.css">
+	<!-- Google Font: Source Sans Pro -->
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="./css/font-awesome.min.css">
+	<!-- Theme style -->
+	<link rel="stylesheet" href="./css/adminlte.min.css">
 </head>
 
 <body class="hold-transition login-page">
 
-    <div class="register-logo">
-        <a href=""><b>ToDo</b>APP</a>
-    </div>
+	<div class="register-logo">
+		<a href=""><b>ToDo</b>APP</a>
+	</div>
 
-    <div class="login-box">
+	<div class="login-box">
 
-        <!-- /.login-logo -->
-        <div class="card">
-            <div class="card-body login-card-body">
-                <p class="login-box-msg">Iniciar Sesion</p>
-                <form action="" id="login-form">
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-end">
-                        <!-- /.col -->
-                        <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                </form>
+		<!-- /.login-logo -->
+		<div class="card">
+			<div class="card-body login-card-body">
+				<p class="login-box-msg">Iniciar Sesion</p>
+				<form action="" id="login-form">
+					<div class="input-group mb-3">
+						<input type="email" class="form-control" placeholder="Email">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-envelope"></span>
+							</div>
+						</div>
+					</div>
+					<div class="input-group mb-3">
+						<input type="password" class="form-control" placeholder="Password">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-lock"></span>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-end">
+						<!-- /.col -->
+						<div class="col-4">
+							<button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+						</div>
+						<!-- /.col -->
+					</div>
+				</form>
 
-                <!-- <p class="my-1">
+				<!-- <p class="my-1">
                     <a href="">Olvidé mi constraseña</a>
                 </p> -->
-                <p class="mb-0">
-                    <a href="" id="register" class="text-center">Registrarse</a>
-                </p>
-            </div>
-            <!-- /.login-card-body -->
-        </div>
-    </div>
-    <!-- /.login-box -->
+				<p class="mb-0">
+					<a href="" id="register" class="text-center">Registrarse</a>
+				</p>
+			</div>
+			<!-- /.login-card-body -->
+		</div>
+	</div>
+	<!-- /.login-box -->
 
-    <div class="register-box d-none">
-        <div class="card">
-            <div class="card-body register-card-body">
-                <p class="login-box-msg">Registrarse</p>
+	<div class="register-box d-none">
+		<div class="card">
+			<div class="card-body register-card-body">
+				<p class="login-box-msg">Registrarse</p>
 
-                <form action="" id="register-form">
-                    <div class="input-group mb-3">
-                        <input type="text" id="create-user" class="form-control" placeholder="Nombre de usuario">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-user"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="email" id="create-email" class="form-control" placeholder="Email">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" id="create-password" class="form-control" placeholder="Constraseña">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" id="confirm-password" class="form-control"
-                            placeholder="Repetir Constraseña">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-end">
-                        <!-- /.col -->
-                        <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                </form>
+				<form action="" id="register-form">
+					<div class="input-group mb-3">
+						<input type="text" id="create-user" class="form-control" placeholder="Nombre de usuario">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-user"></span>
+							</div>
+						</div>
+					</div>
+					<div class="input-group mb-3">
+						<input type="email" id="create-email" class="form-control" placeholder="Email">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-envelope"></span>
+							</div>
+						</div>
+					</div>
+					<div class="input-group mb-3">
+						<input type="password" id="create-password" class="form-control" placeholder="Constraseña">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-lock"></span>
+							</div>
+						</div>
+					</div>
+					<div class="input-group mb-3">
+						<input type="password" id="confirm-password" class="form-control"
+							placeholder="Repetir Constraseña">
+						<div class="input-group-append">
+							<div class="input-group-text">
+								<span class="fas fa-lock"></span>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-end">
+						<!-- /.col -->
+						<div class="col-4">
+							<button type="submit" class="btn btn-primary btn-block">Enviar</button>
+						</div>
+						<!-- /.col -->
+					</div>
+				</form>
 
 
-                <a href="" id="login" class="text-center">Ya estoy registrado</a>
-            </div>
-            <!-- /.form-box -->
-        </div><!-- /.card -->
-    </div>
+				<a href="" id="login" class="text-center">Ya estoy registrado</a>
+			</div>
+			<!-- /.form-box -->
+		</div><!-- /.card -->
+	</div>
 
-    <script src="./js/functions.js"></script>
-    <script src="./js/login.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="./js/functions.js"></script>
+	<script src="./js/login.js"></script>
 </body>
 
 </html>
